force-app/main/default/objects/leaseworks__Funded_WIth__c/leaseworks__Funded_WIth__c.object-meta.xml
<CustomObject>
    <description>changing from &apos;Applied To&apos; to &apos;Funded WIth&apos;
[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Z_Unused_NotDeletable_2012 Funded WIth</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_NotDeletable_2012 Funded WIth</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>