force-app/main/default/objects/leaseworks__Funded_WIth__c/fields/leaseworks__Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Funded WIth</relationshipLabel>
    <relationshipName>Applied_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>