force-app/main/default/objects/leaseworks__Funded_WIth__c/fields/leaseworks__Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Reference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Reference</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Funded WIth (Invoice Reference)</relationshipLabel>
    <relationshipName>Applied_Invoices1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>