force-app/main/default/objects/leaseworks__Funded_WIth__c/fields/leaseworks__Maintenance_Reserve_Engine_3_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_Engine_3_LLP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MR for engine 3 LLP (left engine/outer for four engine aircraft)</description>
    <inlineHelpText>MR for engine 3 LLP (left engine/outer for four engine aircraft)</inlineHelpText>
    <label>Engine 3 LLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>