force-app/main/default/objects/leaseworks__Funded_WIth__c/fields/leaseworks__Maintenance_Reserve_LG_Right_Wing__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_LG_Right_Wing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Landing Gear - Right Wing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>