force-app/main/default/objects/leaseworks__Funded_WIth__c/fields/leaseworks__Type_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_F__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>