force-app/main/default/objects/leaseworks__Funded_WIth__c/fields/leaseworks__Y_Hidden_Credit_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Credit_Balance_Amount__c</fullName>
    <formula>leaseworks__Credit_Note__r.leaseworks__Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Credit Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>