force-app/main/default/objects/leaseworks__Funded_WIth__c/validationRules/leaseworks__CreditNoteValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CreditNoteValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(contains( Text(leaseworks__Credit_Note__r.leaseworks__Invoice_Type__c) , &#39;Credit Note MR&#39;), contains(Text(leaseworks__Credit_Note__r.leaseworks__Invoice_Type__c) , &#39;Credit Note Rent&#39;) )
  ,   leaseworks__Credit_Note__r.leaseworks__Total_Applied_Amount__c &gt; leaseworks__Credit_Note__r.leaseworks__Total_Funded_Amount__c 
 )</errorConditionFormula>
    <errorMessage>Total Applied amount cannot be greater than Funded With amount.</errorMessage>
</ValidationRule>