force-app/main/default/objects/leaseworks__Funded_WIth__c/validationRules/leaseworks__InvoiceRefShouldBeOverpaid.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InvoiceRefShouldBeOverpaid</fullName>
    <active>true</active>
    <errorConditionFormula>and ( or (ISNEW() , ISCHANGED(leaseworks__Invoice_Reference__c))   ,leaseworks__Invoice_Reference__r.leaseworks__Balance_Due__c &gt;=0 )</errorConditionFormula>
    <errorDisplayField>leaseworks__Invoice_Reference__c</errorDisplayField>
    <errorMessage>Funded Invoice should be overpaid.</errorMessage>
</ValidationRule>