force-app/main/default/objects/leaseworks__Funded_WIth__c/validationRules/leaseworks__NoFutureDatedPayments.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NoFutureDatedPayments</fullName>
    <active>true</active>
    <description>Payment date cannot be future date.</description>
    <errorConditionFormula>leaseworks__Application_Date__c &gt; today()</errorConditionFormula>
    <errorDisplayField>leaseworks__Application_Date__c</errorDisplayField>
    <errorMessage>Please enter the date on which the payment is received. It cannot be a future date.</errorMessage>
</ValidationRule>