force-app/main/default/objects/leaseworks__Funded_WIth__c/validationRules/leaseworks__StatusRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__StatusRule</fullName>
    <active>true</active>
    <description>You can not modify once it is approved.</description>
    <errorConditionFormula>text(PRIORVALUE(leaseworks__Status__c)) == &apos;Approved&apos;</errorConditionFormula>
    <errorMessage>You can not modify once it is approved.</errorMessage>
</ValidationRule>