force-app/main/default/objects/leaseworks__Funded_WIth__c/validationRules/leaseworks__StatusRule2.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__StatusRule2</fullName>
    <active>true</active>
    <description>You can not create with approved status.</description>
    <errorConditionFormula>AND (ISNEW() , text(leaseworks__Status__c) == &apos;Approved&apos; )</errorConditionFormula>
    <errorMessage>You can not create with approved status.</errorMessage>
</ValidationRule>