force-app/main/default/objects/leaseworks__Funded_WIth__c/validationRules/leaseworks__Total_Invoice_Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Total_Invoice_Amount_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>OR (leaseworks__Applied_Amount__c &lt;=0, and (   leaseworks__Type_F__c = &apos;Credit Note Rent&apos;  , isBlank(leaseworks__Applied_Amount__c ) )
 )</errorConditionFormula>
    <errorDisplayField>leaseworks__Applied_Amount__c</errorDisplayField>
    <errorMessage>Amount must be greater than zero.</errorMessage>
</ValidationRule>